@@ -1,7 +1,7 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         OOPS
-version:      0.2003
+version:      0.2004
 version_from: lib/OOPS.pm
 installdirs:  site
 requires:
@@ -11,4 +11,4 @@ requires:
     Scalar::Util:                  0
 
 distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.17
+generated_by: ExtUtils::MakeMaker version 6.30_01
