@@ -1,5 +1,15 @@
+2008/03/05 - 0.2004 - mysql improvement
+	
+	Mysql:
+		Mysql version 5.0.45 does not have the SERIALIZABLE
+		locking problem.  5.0.22 does.  "FOR UPDATE" is no 
+		longer added to queries when mysql version 5.0.45 or
+		above is detected.
+		
+		The mysql slow deadlock detection problem turned out to be
+		a bug in the test suite.
 
-2007/05/09 - 0.2002 - major release: garbage collection, bugfixes, mysql
+2007/05/11 - 0.2003 - major release: garbage collection, bugfixes, mysql
 
 	New features:
 
